	  + Remove all references to an item when it's hidden
	    (preferably with the option to re-add them when unhiding)
	  + Add a link for the hidden 'h' option at /hist

1.18 - ?
	- Releases, producers and visual novel items can't be fully deleted anymore
	- Hidden vote and vnlist items from the 'recent' lists on VN stat pages for
	  users who don't want that to be seen
	- Edit summary field is required
	- Changed earliest release date to 1980

1.17 - 2008-06-21 (r33)
	- Added PS3 and Xbox 360 to platforms
	- Relation graph generation improvements: Unicode, anti-aliassing, async
	- Removed all passwords from the main code, and created a seperate config
	  file to override all options - not available on SVN
	- Dynamic loading, several bugfixes, and code cleanup for Multi
	- Added 'School Life' and 'Protagonist' categories
	- Time and Place categories are now boolean
	- Added GTIN field to releases
	- Added links to encubed and renai.us

1.16 - 2008-05-22
	- Release dates in the current year or month without a specified day will
	  be considered as not yet released
	- Added platform and language icons to the VN browser
	- Grouped producers, user stats and general information on the VN page
	- Added language icons to producer browser
	- A little CSS cleanup
	- Grouped category browser and search into one advanced search
	- Updated sitemap generator
	- Pattern matching bug fixes in Multi::IRC, and better handling of commands
	- Added .xml extention to all RSS URLs

1.15 - 2008-05-04
	- Relation graph now also updated on VN title change
	- Anime relations
	- [js] Position of the dropdown box is now relative to the link element
	- Used inline-block for icon image sprites (to avoid stupid float hacks)
	- Used icons to indicate the release status type on VN pages
	- Give a 'not logged in' dropdown edit box when the user isn't logged in
	- Fixed the redirects for old URLs
	- Designed a better system to handle documentation