@@ -174,7 +174,7 @@ if($d{vn}{length} || $d{vn}{alias} || @links || $prod) { ]]
  [[ if($d{vote}{vid}) { ]]-
   <li><a href="/v[[= $d{vn}{id} ]]/vote?v=-1">revoke</a></li>
  [[ } for (reverse 1..10) { ]]-
-  <li class="center"><a href="/v[[= $d{vn}{id} ]]/vote?v=[[= $_ ]]">[[= $_ ]]</a></li>
+  <li class="center"><a href="/v[[= $d{vn}{id} ]]/vote?v=[[= $_ ]]" id="dovote_[[= $_ ]]">[[= $_ ]]</a></li>
  [[ } ]]
  </ul>
 </div>
